--- a/view/journal/index.haml
+++ b/view/journal/index.haml
@@ -3,6 +3,9 @@
 		%title Seung-jin Kim
 		%link{:rel=>'stylesheet',:href=>'/styles/main.css',:type=>"text/css"}
 	%body
+		%img{:src=>'/images/seungjin.net.small.white.png'}
+		%img{:src=>'/images/ribbon.png', :height=>22}
 		%hr
 		#journal
 			apple
+		%hr
