--- a/view/journal/index.haml
+++ b/view/journal/index.haml
@@ -1,11 +1,21 @@
 %html
 	%head
 		%title Seung-jin Kim
-		%link{:rel=>'stylesheet',:href=>'/styles/main.css',:type=>"text/css"}
+		%link{:rel=>"shortcut icon", :href=>"/favicon.ico", :type=>"image/x-icon"}
+		%meta{"http-equiv"=>"Content-Type", :content=>"text/html; charset=utf-8"}
+		<!-- Copyright (C) 2005, 2006, 2007, 2008, 2009, 2010 seungjin.net -->
+		%meta{:name=>"date", :content=>"."}
+		%meta{:name=>"author", :content=>"Kim, Seung-jin"}
+		%meta{:name=>"viewport", :content=>"width=device-width,initial-scale=1,user-scalable=yes"}
+		%link{:rel=>'stylesheet', :href=>'/styles/main.css', :type=>"text/css"}=""
+		-#%script{:type=>"text/javascript", :src="/scripts/jquery-1.4.2.min.js"}=""
 	%body
 		%img{:src=>'/images/seungjin.net.small.white.png'}
 		%img{:src=>'/images/ribbon.png', :height=>22}
 		%hr
 		#journal
 			apple
+			%br
+			banana
+		%a{:href=>"/journal/all", :title=>"View all"}View all
 		%hr
